--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ﻿<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
-<head><title>NOVO SITE LINK 28-02-24</title>
-<link rel="sortcut icon" href="https://play-lh.googleusercontent.com/Eg2J_wqPzi774STTViPADmIpLt1RDNnUBJpnQDiIqw7NiNWBnsIB7knRIBJOVXJzbsY" type="image/gif" />
+<head><title>VARIOSSITESEMUM</title>
+<link rel="sortcut icon" href="https://m.media-amazon.com/images/I/51ooBVzHmPL.png" type="image/gif" />
 <link href="CSS🔴.css" rel="stylesheet">
 <link rel="stylesheet" href="CSS🔴.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="santos.12164@hotmail.com">
-<meta name="description" content="NOVO SITE LINK 28-02-24">
-<meta name="keywords" content="NOVO SITE LINK 28-02-24">
+<meta name="description" content="VARIOSSITESEMUM">
+<meta name="keywords" content="VARIOSSITESEMUM">
 </head><body><style>
 img {
     max-width: 100%;
@@ -18,7 +18,7 @@ color:black;
 }
 a:visited{
 text-decoration:none;
-color:red;
+color:#1500ff;
 }
 a:hover{
 text-decoration:none;
@@ -206,27 +206,46 @@ body {
 .openbtn:hover {
   background-color:#444;
 }
-</style></head><body><div id="mySidepanel" class="sidepanel">
+</style></head><body><div id="mySidepanel" class="sidepanel"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+<hr class="dotted">
+  <a href="#">INÍCIO</a>
+  <a href="index_arquivos/SITE 001/1 - Copia.html">🌐 SITE 001</a>
+  <a href="index_arquivos/SITE 002/1 - Copia.html">🌐 SITE 002</a>
+  <a href="index_arquivos/SITE 003/1 - Copia.html">🌐 SITE 003</a>
+  <a href="index_arquivos/SITE 004/1 - Copia.html">🌐 SITE 004</a>
+  <a href="index_arquivos/SITE 005/1 - Copia.html">🌐 SITE 005</a>
+  <a href="index_arquivos/SITE 006/1 - Copia.html">🌐 SITE 006</a>
+  <a href="index_arquivos/SITE 007/1 - Copia.html">🌐 SITE 007</a>
+  <a href="index_arquivos/SITE 008/1 - Copia.html">🌐 SITE 008</a>
+  <a href="index_arquivos/SITE 009/1 - Copia.html">🌐 SITE 009</a>
+  <a href="index_arquivos/SITE 010/1 - Copia.html">🌐 SITE 010</a>
+
+
+
+<hr class="dotted">
+
+
+
+  <a href="index_arquivos/SITE 001/1 - Copia.html">📂 Pasta 1</a>
+  <a href="index_arquivos/SITE 002/1 - Copia.html">📂 Pasta 2</a>
+  <a href="index_arquivos/SITE 003/1 - Copia.html">📂 Pasta 3</a>
+  <a href="index_arquivos/SITE 004/1 - Copia.html">📂 Pasta 4</a>
+  <a href="index_arquivos/SITE 005/1 - Copia.html">📂 Pasta 5</a>
 
 
 <!---------------------------------------------------------------------------------->
-<BR/><BR/><BR/>
+<hr class="rounded"><BR/><BR/><BR/>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 </div>
 
-<button class="openbtn" onclick="openNav()"> ☰ S I T E S ☰ </button>
+<center><button class="openbtn" onclick="openNav()"> ☰ S I T E S ☰ </button></center>
 
 
 <script>
@@ -248,6 +267,29 @@ function closeNav() {
 <!--#################################### INÍCIO ##################################-->
 <!--##############################################################################-->
 <!--##############################################################################-->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<p>Contém conteúdo adulto, <FONT COLOR="red"><b>proibido para menores de 18 anos.</b></FONT></p>
+<p>Atualizado em: <b>08:45 16/01/2025.</b></p>
+<p>Criado em: <b>08:45 16/01/2025.</b></p>
+<p>Envie o link do site para um amigo via <a href="
+https://api.whatsapp.com/send?text=Link para o site *VARIOSSITESEMUM*   [ https://fsgithu.github.io/VARIOSSITESEMUM/ ]
+" target="_blank"><b>whatsapp.</b></a></p>
+<p>Fale comigo via <a href="
+https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
+" target="_blank"><b>whatsapp.</b></a></p>
+
+
+
+
+
+
+
+
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
