--- a/index.html
+++ b/index.html
@@ -238,16 +238,19 @@ body {
 
 
 <!---------------------------------------------------------------------------------->
-<hr class="rounded"><BR/><BR/><BR/>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
+<hr class="rounded"><BR/><BR/><BR/></div>
 <!---------------------------------------------------------------------------------->
-</div>
+<!---------------------------------------------------------------------------------->
+
 
 <center><button class="openbtn" onclick="openNav()"> ☰ S I T E S ☰ </button></center>
 
 
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
 <script>
 function openNav() {
   document.getElementById("mySidepanel").style.width = "250px";
