--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {margin:0;}
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<center><h1>FORTALEZA, 18:39 10/02/2024</h1>
+<center><h1>VARIOSSITESEMUM</h1>
   <h2>BEM VINDO</h2></center>
 <!-----------------------RELOGIO NOVO RELÓGIO BOM-------SEM MARK----------------->
 <center><u><html><head><title></title></head><body><SCRIPT LANGUAGE="JAVASCRIPT">
@@ -300,61 +300,13 @@ https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <hr class="rounded"><ol>
-<!------------------------_blank --- _self ------------------------->
+<!------------------------_blank --- _self ----
 <p><li><a href="
 LINK🔴
 " target="_blank">
 NOME🔴
 </a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
+<!---------------------------------------------
 <p><li><a href="
 LINK🔴
 " target="_blank">
@@ -366,70 +318,6 @@ NOME🔴
 
 
 
-
-
-
-
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
 
 
 
