--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ body {
   width: 0;
   position: fixed;
   z-index: 1;
-  height: 100%px;
+  height: 100%;
   top: 0;
   left: 0;
   background-color: #111;
