--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ document.write('  '+todaysDate);
 </SCRIPT></body></html></u></center>
 <!----------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<hr class="new1">
+<hr class="rounded">
 <!---------------------FAIXA AZUL-- _blank --- _self -----
 <a href="../../index.html" target="_self">
 <div height="100" style="background-color: blue;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>INÍCIO</FONT></p></div></a><hr class="new1">
@@ -554,7 +554,7 @@ h1 {
   text-shadow: 2px 2px 4px black, 0 0 25px blue, 0 0 5px darkblue;
 }
 </style></head><body></body></html>
-<!----------------------------------------------------------->
+<!------------------------------
 <hr class="new1"><!DOCTYPE html><html><head><style>
 .pagination {
   display: inline-block;
@@ -584,16 +584,17 @@ h1 {
 
 </div></body></html>
 <!----------------------------------------------------------->
-<!----------------------------------------------------------->
+<!------------------------------
 <hr class="new1">
 <!----------------------------------------------------------->
-<!----------------------------------------------------------->
+<!-------------------------------
 <center><p style="color: blue; font-size: 8pt;">Santos - 02:31 30/05/2023 | fs2016 © - Ⓒ<br/><a target="_blank" href="
 https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
 ">Whatsapp.</a></p></center>
+<!------------------------------
+<HR WIDTH="20%" NOSHADE SIZE="5" color="#00ff00">
 <!----------------------------------------------------------->
-<HR WIDTH="20%" NOSHADE SIZE="5" color="#00ff00"><BR/><BR/><BR/>
-<!----------------------------------------------------------->
+<BR/><BR/><BR/>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!--------------------------------------RODAPÉ-------------------------------------->
