--- a/index.html
+++ b/index.html
@@ -276,13 +276,17 @@ function closeNav() {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<p>Contém conteúdo adulto, <FONT COLOR="red"><b>proibido para menores de 18 anos.</b></FONT></p>
-<p>Atualizado em: <b>08:45 16/01/2025.</b></p>
-<p>Criado em: <b>08:45 16/01/2025.</b></p>
-<p>Envie o link do site para um amigo via <a href="
+<p>&emsp;Contém conteúdo adulto, <FONT COLOR="red"><b>proibido para menores de 18 anos.</b></FONT></p>
+
+<p>&emsp;Atualizado em: <b>08:45 16/01/2025.</b></p>
+
+<p>&emsp;Criado em: <b>08:45 16/01/2025.</b></p>
+
+<p>&emsp;Envie o link do site para um amigo via <a href="
 https://api.whatsapp.com/send?text=Link para o site *VARIOSSITESEMUM*   [ https://fsgithu.github.io/VARIOSSITESEMUM/ ]
 " target="_blank"><b>whatsapp.</b></a></p>
-<p>Fale comigo via <a href="
+
+<p>&emsp;Fale comigo via <a href="
 https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
 " target="_blank"><b>whatsapp.</b></a></p>
 
