--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ function closeNav() {
 
 <p>&emsp;Atualizado em: <b>08:45 16/01/2025.</b></p>
 
-<p>&emsp;Criado em: <b>08:45 16/01/2025.</b></p>
+<p>&emsp;Criado em: &ensp; &ensp;&ensp;<b>08:45 16/01/2025.</b></p>
 
 <p>&emsp;Envie o link do site para um amigo via <a href="
 https://api.whatsapp.com/send?text=Link para o site *VARIOSSITESEMUM*   [ https://fsgithu.github.io/VARIOSSITESEMUM/ ]
