--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@ https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
 
 
 
-<div class="footer"><FONT SIZE=+3><B><button class="openbtn" onclick="openNav()">&emsp; ☰ &emsp;S I T E S&emsp; ☰ &emsp;</button></B></FONT></div>
+<div class="footer"><FONT SIZE=+3><B><button class="openbtn" onclick="openNav()">💥 &emsp; ☰ &emsp;S I T E S&emsp; ☰ &emsp; 💥</button></B></FONT></div>
 
 </body></html> 
 <!---------------------------------------------------------------------------------->
