--- a/index_arquivos/0-EXEMPLO/1.html
+++ b/index_arquivos/0-EXEMPLO/1.html
@@ -79,7 +79,7 @@ body {margin:0;}
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<button class="openbtn" onclick="openNav()"> ☰ S I T E S ☰ </button>
+<button class="openbtn" onclick="openNav()"><B> 💥 &emsp; ☰ &emsp;S I T E S&emsp; ☰ &emsp; 💥 </B></button>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
@@ -246,7 +246,7 @@ body {
 <!----------------------------
 
 
-<center><button class="openbtn" onclick="openNav()"> ☰ S I T E S ☰ </button></center>
+<button class="openbtn" onclick="openNav()"><B> 💥 &emsp; ☰ &emsp;S I T E S&emsp; ☰ &emsp; 💥 </B></button>
 
 
 <!---------------------------------------------------------------------------------->
@@ -722,7 +722,7 @@ https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
 
 
 
-<div class="footer"><FONT SIZE=+3><B><button class="openbtn" onclick="openNav()"> ☰ S I T E S ☰ </button></B></FONT></div>
+<div class="footer"><FONT SIZE=+3><button class="openbtn" onclick="openNav()"><B> 💥 &emsp; ☰ &emsp;S I T E S&emsp; ☰ &emsp; 💥 </B></button></FONT></div>
 
 </body></html> 
 <!---------------------------------------------------------------------------------->
