--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@ body {
 
 
 
-  <a href="index_arquivos/SITE 001/1 - Copia.html">📂 Pasta 1</a>
-  <a href="index_arquivos/SITE 002/1 - Copia.html">📂 Pasta 2</a>
-  <a href="index_arquivos/SITE 003/1 - Copia.html">📂 Pasta 3</a>
-  <a href="index_arquivos/SITE 004/1 - Copia.html">📂 Pasta 4</a>
-  <a href="index_arquivos/SITE 005/1 - Copia.html">📂 Pasta 5</a>
+  <a href="index_arquivos/Pasta 1/1 - Copia.html">📂 Pasta 1</a>
+  <a href="index_arquivos/Pasta 2/1 - Copia.html">📂 Pasta 2</a>
+  <a href="index_arquivos/Pasta 3/1 - Copia.html">📂 Pasta 3</a>
+  <a href="index_arquivos/Pasta 4/1 - Copia.html">📂 Pasta 4</a>
+  <a href="index_arquivos/Pasta 5/1 - Copia.html">📂 Pasta 5</a>
 
 
 <!---------------------------------------------------------------------------------->
