--- a/index_arquivos/0-EXEMPLO/1.html
+++ b/index_arquivos/0-EXEMPLO/1.html
@@ -230,11 +230,11 @@ body {
 
 
 
-  <a href="../SITE 001/1 - Copia.html">📂 Pasta 1</a>
-  <a href="../SITE 002/1 - Copia.html">📂 Pasta 2</a>
-  <a href="../SITE 003/1 - Copia.html">📂 Pasta 3</a>
-  <a href="../SITE 004/1 - Copia.html">📂 Pasta 4</a>
-  <a href="../SITE 005/1 - Copia.html">📂 Pasta 5</a>
+  <a href="../Pasta 1/1 - Copia.html">📂 Pasta 1</a>
+  <a href="../Pasta 2/1 - Copia.html">📂 Pasta 2</a>
+  <a href="../Pasta 3/1 - Copia.html">📂 Pasta 3</a>
+  <a href="../Pasta 4/1 - Copia.html">📂 Pasta 4</a>
+  <a href="../Pasta 5/1 - Copia.html">📂 Pasta 5</a>
 
 
 <!---------------------------------------------------------------------------------->
