Update 1 - Copia.html

--- a/index_arquivos/Pasta 1/1 - Copia.html
+++ b/index_arquivos/Pasta 1/1 - Copia.html
@@ -307,6 +307,78 @@ NOME🔴
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.newspaper {
+  column-count: 3;
+  column-gap: 40px;
+  column-rule-style: solid;
+}
+</style>
+</head>
+<body>
+
+<div class="newspaper">
+<!---------------------------------------------------------------------------------->
+<ol>
+<!------------------------_blank --- _self --------------------->
+<p><li><a href="
+LINK🔴
+" target="_blank">
+NOME🔴
+</a></li></p>
+<!-------------------------------------------------------------->
+<p><li><a href="
+LINK🔴
+" target="_blank">
+NOME🔴
+</a></li></p>
+<!-------------------------------------------------------------->
+<p><li><a href="
+LINK🔴
+" target="_blank">
+NOME🔴
+</a></li></p>
+<!-------------------------------------------------------------->
+<p><li><a href="
+LINK🔴
+" target="_blank">
+NOME🔴
+</a></li></p>
+<!-------------------------------------------------------------->
+
+
+
+<p><li><a href="
+LINK🔴
+" target="_blank">
+NOME🔴
+</a></li></p>
+<!-------------------------------------------------------------->
+<p><li><a href="
+LINK🔴
+" target="_blank">
+NOME🔴
+</a></li></p>
+<!-------------------------------------------------------------->
+
+
+
+
+
+<!-------------------------------------------------------------->
+</ol>
+<!-------------------------------------------------------------->
+
+
+</div>
+
+</body>
+</html>
+
+
 
 
 
