--- a/index_arquivos/Pasta 1/1 - Copia.html
+++ b/index_arquivos/Pasta 1/1 - Copia.html
@@ -95,7 +95,7 @@ body {margin:0;}
 <!----------------------------------------------
 <center><h1>VARIOSSITESEMUM</h1>
   <h2>BEM VINDO</h2></center>
-<!-----------------------RELOGIO NOVO RELÓGIO BOM-------SEM MARK----------------->
+<!-----------------------RELOGIO NOVO RELÓGIO BOM-------SEM MARK----
 <center><u><html><head><title></title></head><body><SCRIPT LANGUAGE="JAVASCRIPT">
 <!--
 var now = new Date();
@@ -127,7 +127,7 @@ else {Year = yearNr;}
 var todaysDate =(" " + Day + ", " + dayNr + "/" + Month + "/" + Year);
 document.write('  '+todaysDate);
 //-->
-</SCRIPT>
+</SCRIPT><!--------------
 <SPAN ID="Clock">00:00:00</SPAN>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
@@ -216,7 +216,7 @@ body {
   <a href="../SITE 001/1 - Copia.html">🌐 SITE 001</a>
   <a href="../SITE 002/1 - Copia.html">🌐 SITE 002</a>
   <a href="../SITE 003/1 - Copia.html">🌐 SITE 003</a>
-  <a href="..s/SITE 004/1 - Copia.html">🌐 SITE 004</a>
+  <a href="../SITE 004/1 - Copia.html">🌐 SITE 004</a>
   <a href="../SITE 005/1 - Copia.html">🌐 SITE 005</a>
   <a href="../SITE 006/1 - Copia.html">🌐 SITE 006</a>
   <a href="../SITE 007/1 - Copia.html">🌐 SITE 007</a>
@@ -307,84 +307,129 @@ NOME🔴
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-.newspaper {
-  column-count: 3;
-  column-gap: 40px;
-  column-rule-style: solid;
+* {
+  box-sizing: border-box;
 }
-</style>
-</head>
-<body>
+#myInput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 12px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 7px solid red;
+  margin-bottom: 12px;
+}
+#myUL {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+#myUL li a {
+  border: 1px solid #ddd;
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  display: block
+}
+#myUL li a:hover:not(.header) {
+  background-color: #eee;
+}
+</style></head><body>
 
-<div class="newspaper">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="🔍 Pesquisa nessa página..." title="Type in a name"><ul id="myUL">
 <!---------------------------------------------------------------------------------->
-<ol>
-<!------------------------_blank --- _self --------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">📂 
-Link 001
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">📂 
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">📂 
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">📂 
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-
-
-
-<p><li><a href="
-LINK🔴
-" target="_blank">📂 
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-<p><li><a href="
-LINK🔴
-" target="_blank">📂 
-NOME🔴
-</a></li></p>
-<!-------------------------------------------------------------->
-
-
-
-
-
-<!-------------------------------------------------------------->
-</ol>
-<!-------------------------------------------------------------->
-
-
-</div>
-
-</body>
-</html>
-
-
-
-
-
-
-
 <!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!------------------------_blank --- _self ----------------------------------------->
+<!---------------------------------------------------------------------------------->
+<li><a href="Site 01/
+LINK🔴
+/1 - Copia.html" target="_blank">📂 
+Site 01
+</a></li>
+<!---------------------------------------------------------------------------------->
+<li><a href="Site 02/
+LINK🔴
+/1 - Copia.html" target="_blank">📂 
+Site 02
+</a></li>
+<!---------------------------------------------------------------------------------->
+
+
+
+
+<li><a href="Site 03/
+LINK🔴
+/1 - Copia.html" target="_blank">📂 
+Site 03
+</a></li>
+<!---------------------------------------------------------------------------------->
+<li><a href="Site 04/
+LINK🔴
+/1 - Copia.html" target="_blank">📂 
+Site 04
+</a></li>
+<!---------------------------------------------------------------------------------->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-------------------------------------------
+<li><a href="#">Cindy</a></li>
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+</ul><script>
+function myFunction() {
+    var input, filter, ul, li, a, i, txtValue;
+    input = document.getElementById("myInput");
+    filter = input.value.toUpperCase();
+    ul = document.getElementById("myUL");
+    li = ul.getElementsByTagName("li");
+    for (i = 0; i < li.length; i++) {
+        a = li[i].getElementsByTagName("a")[0];
+        txtValue = a.textContent || a.innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+        } else {
+            li[i].style.display = "none";
+        }
+    }
+}
+</script></body></html>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
