Update 1 - Copia.html

--- a/index_arquivos/SITE 001/1 - Copia.html
+++ b/index_arquivos/SITE 001/1 - Copia.html
@@ -216,7 +216,7 @@ body {
   <a href="../SITE 001/1 - Copia.html">🌐 SITE 001</a>
   <a href="../SITE 002/1 - Copia.html">🌐 SITE 002</a>
   <a href="../SITE 003/1 - Copia.html">🌐 SITE 003</a>
-  <a href="..s/SITE 004/1 - Copia.html">🌐 SITE 004</a>
+  <a href="../SITE 004/1 - Copia.html">🌐 SITE 004</a>
   <a href="../SITE 005/1 - Copia.html">🌐 SITE 005</a>
   <a href="../SITE 006/1 - Copia.html">🌐 SITE 006</a>
   <a href="../SITE 007/1 - Copia.html">🌐 SITE 007</a>
