--- a/index.html
+++ b/index.html
@@ -213,22 +213,9 @@ body {
 <!---------------------------------------------------------------------------------->
 <hr class="dotted">
   <a href="#">INÍCIO</a>
-  <a href="index_arquivos/SITE 001/1 - Copia.html">🌐 SITE 001</a>
-  <a href="index_arquivos/SITE 002/1 - Copia.html">🌐 SITE 002</a>
-  <a href="index_arquivos/SITE 003/1 - Copia.html">🌐 SITE 003</a>
-  <a href="index_arquivos/SITE 004/1 - Copia.html">🌐 SITE 004</a>
-  <a href="index_arquivos/SITE 005/1 - Copia.html">🌐 SITE 005</a>
-  <a href="index_arquivos/SITE 006/1 - Copia.html">🌐 SITE 006</a>
-  <a href="index_arquivos/SITE 007/1 - Copia.html">🌐 SITE 007</a>
-  <a href="index_arquivos/SITE 008/1 - Copia.html">🌐 SITE 008</a>
-  <a href="index_arquivos/SITE 009/1 - Copia.html">🌐 SITE 009</a>
-  <a href="index_arquivos/SITE 010/1 - Copia.html">🌐 SITE 010</a>
-
-
+  <a href="index_arquivos/Voltar/1 - Copia.html">Voltar</a>
 
 <hr class="dotted">
-
-
 
   <a href="index_arquivos/Pasta 1/1 - Copia.html">📂 Pasta 1</a>
   <a href="index_arquivos/Pasta 2/1 - Copia.html">📂 Pasta 2</a>
