Update 1 - Copia.html

--- a/index_arquivos/Pasta 1/1 - Copia.html
+++ b/index_arquivos/Pasta 1/1 - Copia.html
@@ -332,6 +332,16 @@ function closeNav() {
 02
 </a></li>
 <!---------------------------------------------------------------------------------->
+<li><a href="Lista 03/
+1 - Copia.html" target="_self">📂 Lista 
+03
+</a></li>
+<!---------------------------------------------------------------------------------->
+<li><a href="Lista 00🔴/
+1 - Copia.html" target="_self">📂 Lista 
+00🔴
+</a></li>
+<!---------------------------------------------------------------------------------->
 
 
 
