Update 1 - Copia.html

--- a/index_arquivos/Pasta 1/Lista 01/1 - Copia.html
+++ b/index_arquivos/Pasta 1/Lista 01/1 - Copia.html
@@ -350,7 +350,7 @@ NOME🔴
 <li><a href="
 Nome🔴
 /index.html" target="_blank">
-Nome🔴
+Site "<B>LEGAL</B>" - Menu em uma única página
 </a></li>
 <!---------------------------------------------------------------------------------->
 <li><a href="
