Update 1 - Copia.html

--- a/index_arquivos/Pasta 1/Lista 01/1 - Copia.html
+++ b/index_arquivos/Pasta 1/Lista 01/1 - Copia.html
@@ -348,9 +348,9 @@ NOME🔴
 <!------------------------_blank --- _self ----------------------------------------->
 <!---------------------------------------------------------------------------------->
 <li><a href="
-Nome🔴
+LEGAL
 /index.html" target="_blank">
-Site "<B>LEGAL</B>" - Menu em uma única página
+Site "<B>LEGAL</B>" - Menu em uma única página.
 </a></li>
 <!---------------------------------------------------------------------------------->
 <li><a href="
