--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {margin:0;}
 }
 .main {
   padding: 0px;
-  margin-top: 60px;
+  margin-top: 100px;
   height: 500px; /* Used in this example to enable scrolling */
 }
 </style></head><body><div class="navbar">
@@ -79,7 +79,7 @@ body {margin:0;}
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<button class="openbtn" onclick="openNav()"><B> 💥 &emsp; ☰ &emsp;S I T E S&emsp; ☰ &emsp; 💥 </B></button>
+<center><a href="index_arquivos/NOVOMENU/index.html"><FONT SIZE=+3><B>☰ &emsp; NOVO MENU &emsp; ☰</B></FONT></a></center>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
