--- a/index_arquivos/NOVOMENU/index.html
+++ b/index_arquivos/NOVOMENU/index.html
@@ -121,38 +121,63 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
+<!----------------------------- _self ------ _blank ----
+<!------------------------------------------------------------------>
+<li><a href="
+TECNOLOGICO/index.html
+" target="_blank"><b>
+Site "<B>TECNOLÓGICO</B>"
+</b><FONT COLOR="#FF0000"> (
+Site embutido
+)</FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINKSQUEUSO/index.html
+" target="_blank"><b>
+LINKS E SITES QUE USO
+</b><FONT COLOR="#FF0000"> (
+Site de busca embutido
+)</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
-</FONT></a></li>
+</b><FONT COLOR="#FF0000"> (
+VERMELHO🔴
+)</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
-</FONT></a></li>
+</b><FONT COLOR="#FF0000"> (
+VERMELHO🔴
+)</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
-</FONT></a></li>
+</b><FONT COLOR="#FF0000"> (
+VERMELHO🔴
+)</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
-</FONT></a></li>
+</b><FONT COLOR="#FF0000"> (
+VERMELHO🔴
+)</FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (
+VERMELHO🔴
+)</FONT></a></li>
 <!------------------------------------------------------------------>
 
 
@@ -163,19 +188,19 @@ NOME🔴
 
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
-</FONT></a></li>
+</b><FONT COLOR="#FF0000"> (
+VERMELHO🔴
+)</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
-</b><FONT COLOR="#FF0000"> 
-(VERMELHO🔴)
-</FONT></a></li>
+</b><FONT COLOR="#FF0000"> (
+VERMELHO🔴
+)</FONT></a></li>
 <!------------------------------------------------------------------>
 
 
